# SciDB-HDFS

./: .gitignore  CMakeBuildFlags.cmake  CMakeLists.txt  README.md
Docker Build and HDFS Plugin/: Dockerfile  start-all.sh
Docker Build and HDFS Plugin/hdfs_plugin/: CMakeLists.txt  cmake_install.cmake  hdfs_loader.cpp
Xenial Index/: Contents  InRelease  Packages  Release  Release.gpg  librocksdb-dev_5.7.2~scidb~xenial-1_amd64.deb  librocksdb5_5.7.2~scidb~xenial-1_amd64.deb  libscalapack-mpi-dev_2.0.2-4~scidb~xenial+1_amd64.deb  libscalapack-mpich-dev_2.0.2-4~scidb~xenial+1_amd64.deb  libscalapack-mpich2.0_2.0.2-4~scidb~xenial+1_amd64.deb  libscalapack-openmpi-dev_2.0.2-4~scidb~xenial+1_amd64.deb  libscalapack-openmpi2.0_2.0.2-4~scidb~xenial+1_amd64.deb  scalapack-mpi-test_2.0.2-4~scidb~xenial+1_amd64.deb  scalapack-test-common_2.0.2-4~scidb~xenial+1_all.deb  scidb-19.11-all_0-1_amd64.deb  scidb-19.11-all_3-1_amd64.deb  scidb-19.11-all_4-1_amd64.deb  scidb-19.11-all_5-1_amd64.deb  scidb-19.11-ce-0.deb  scidb-19.11-client-python-dbg_0-1_amd64.deb  scidb-19.11-client-python-dbg_3-1_amd64.deb  scidb-19.11-client-python-dbg_4-1_amd64.deb  scidb-19.11-client-python-dbg_5-1_amd64.deb  scidb-19.11-client-python_0-1_amd64.deb  scidb-19.11-client-python_3-1_amd64.deb  scidb-19.11-client-python_4-1_amd64.deb  scidb-19.11-client-python_5-1_amd64.deb  scidb-19.11-client_0-1_amd64.deb  scidb-19.11-client_3-1_amd64.deb  scidb-19.11-client_4-1_amd64.deb  scidb-19.11-client_5-1_amd64.deb  scidb-19.11-dbginfo_0-1_amd64.deb  scidb-19.11-dbginfo_3-1_amd64.deb  scidb-19.11-dbginfo_4-1_amd64.deb  scidb-19.11-dbginfo_5-1_amd64.deb  scidb-19.11-dev-tools-dbg_0-1_amd64.deb  scidb-19.11-dev-tools-dbg_3-1_amd64.deb  scidb-19.11-dev-tools-dbg_4-1_amd64.deb  scidb-19.11-dev-tools-dbg_5-1_amd64.deb  scidb-19.11-dev_0-1_all.deb  (+15 more)
include/network/: NetworkMessageFactory.h
include/util/: Condition.h  Mutex.h
src/: CMakeLists.txt
src/mkl/: CMakeLists.txt
src/mpi/: CMakeLists.txt  dummy_mpi.cpp
src/network/: Authenticator.cpp
